--- a/tts/templates/api/index.html
+++ b/tts/templates/api/index.html
@@ -7,16 +7,16 @@
     <h1>Welcome to the HazardHunt API</h1>
     <p>Below is a list of available API endpoints and their links:</p>
     <ul>
-        <li><strong>Worksites </strong> <a href="{{ worksites_url }}">/api/worksites/</a></li>
+        <li><strong>Projects </strong> <a href="{{ projects_url }}">/api/projects/</a></li>
         <ul>
-            <li>List all worksites - GET ../api/worksites/</li>
-            <li>Create a new worksite - POST ../api/worksites/</li>
-            <li>Retrieve, update, or delete a specific worksite - GET ../api/worksites/&lt;worksite_id&gt;/</li>
+            <li>List all projects - GET ../api/projects/</li>
+            <li>Create a new projects - POST ../api/projects/</li>
+            <li>Retrieve, update, or delete a specific projects - GET ../api/projects/&lt;projects_id&gt;/</li>
         </ul>
         <li><strong>Surveys </strong><a href="{{ surveys_url }}">/api/surveys/</a></li>
         <ul>
-            <li>List surveys for a specific worksite - GET ../api/worksites/&lt;worksite_id&gt;/surveys/</li>
-            <li>Create a survey for a specific worksite - POST ../api/worksites/&lt;worksite_id&gt;/surveys/</li>
+            <li>List surveys for a specific projects - GET ../api/projects/&lt;projects_id&gt;/surveys/</li>
+            <li>Create a survey for a specific projects - POST ../api/projects/&lt;projects_id&gt;/surveys/</li>
             <li>List all surveys - GET ../api/surveys/</li>
             <li>Create a new survey - POST ../api/surveys/</li>
             <li>Retrieve, update, or delete a specific survey - GET ../api/surveys/&lt;survey_id&gt;/</li>
